# OOP5-lab

./: .gitignore  CMakeLists.txt  main.cpp
classes/: Animal.cpp  Animal.h  Cat.cpp  Cat.h
classes/funcs/: FirstExample.cpp  FirstExample.h  Func.cpp  Func.h  SecondExample.cpp  SecondExample.h  ThirdExample.cpp  ThirdExample.h
