cmake_minimum_required(VERSION 3.24)
project(Laba5)

set(CMAKE_CXX_STANDARD 17)
add_executable(Laba5 main.cpp classes/funcs/Func.cpp classes/funcs/Func.h classes/funcs/FirstExample.cpp classes/funcs/FirstExample.h classes/funcs/SecondExample.cpp classes/funcs/SecondExample.h classes/funcs/ThirdExample.cpp classes/funcs/ThirdExample.h)
